2011-03-22 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_config.php: fixed the update "collection_max_size"
	value.
	
	Fixes: #3220485

2011-03-22 Miguel de Dios  <miguel.dedios@artica.es>

	* extensions/resource_registration.php: fixed the require once enterprise
	file.

2011-03-22 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions.php: fixed the function "safe_url_extraclean" to pass
	the url with character -.
	
	Fixes: #3234360

2011-03-22 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_reporting.php: cleaned source code style.
	
	* extensions/resource_registration.php,
	extensions/resource_exportation.php: added first version of extension to
	import and export reports and visual console.

2011-03-22  Junichi Satoh  <junichi@rworks.jp>

	* extras/pandoradb_migrate_v3.2_to_v4.0.sql: Added missing ';'.

2011-03-21 Javier Lanz <javier.lanz@artica.es>
	
	* include/functions_events.php: Truncated agent and module name
	* include/functions_reporting.php: Added functionality to store info of
	General, Top n and Exception reports
	* include/pchart_graph.php: Added function graph_sla_horizontal to print
	sla horizontal graph bar. (Not working properly yet)
	* include/pandora_graph.php: Added prototipe for
	function graph_sla_horizontal
	* include/fgraph.php: Added function graph_sla_pie to print sla pie graph
	* include/functions.php: Added options top n, exception and general for
	the combo box to select report type.
	* pandoradb.sql: added fome fields to treport_content table
	* extras/pandoradb_migrate_v3.2_to_v4.0.sql: added some fields to 
	treport_content table
	* godmode/reporting/reporting_builder.list_items.php: Truncated agent
	and module name
	* godmode/reporting/reporting_builder.preview.php: Added a bottom scroll
	bar to the report table
	* godmode/reporting/reporting_builder.php: Added variables for the new
	kinds of reports, top n, exception and general